# ez-query

./: .env-template  .gitignore  LICENSE.md  README.md  constants.py  main.py  processor.py  pyproject.toml  requirements.txt  schema_req.py
src/ez_query/: chatgpt_communicator.py  config.py  constants.py  main.py  processor.py  schema_req.py
