[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ez_query"
version = "0.0.1"
authors = [
  { name="Abhishek Velayudhamm", email="velayudham.abhishek@gmail.com" },
]
description = "SQL Query Generator (using your table schemas) powered by ChatGPT."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mysql-connector-python==8.0.32",
    "openai==0.27.0",
    "python-dotenv==0.21.1",
    "prompt-toolkit==3.0.38",
    "argparse==1.4.0",
]

[project.urls]
"Source Code" = "https://github.com/AbhishekVel/ez-query"

[project.scripts]
ez_query = "ez_query.main:run"

